--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,48 +1,48 @@
-<nav class="navigation navigation--inline">
+<nav class="navbar_navigation navbar_navigation--inline">
   <ul>
     <li style="padding-left: 1.2rem">
-      <a href="{{ path("space_index") }}">
-        <svg class="icon icon--2x">
+      <a class="navbar_a" href="{{ path("space_index") }}">
+        <svg class="navbar_icon navbar_icon--2x navbar_svg">
           <use xlink:href="#icon-home" />
         </svg>
-        <div class="invisible">
-          <span class="invisible">
+        <div class="navbar_invisible">
+          <span class="navbar_invisible">
             Accueil
           </span>
         </div>
       </a>
     </li>
     <li>
-      <a href="#">
-        <svg class="icon icon--2x">
+      <a class="navbar_a" href="#">
+        <svg class="navbar_icon navbar_icon--2x navbar_svg">
           <use xlink:href="#icon-search" />
         </svg>
-        <div class="invisible">
-          <span class="invisible">
+        <div class="navbar_invisible">
+          <span class="navbar_invisible">
             Louer
           </span>
         </div>
       </a>
     </li>
     <li>
-      <a href="{{ path("space_new") }}">
-        <svg class="icon icon--2x">
+      <a class="navbar_a" href="{{ path("space_new") }}">
+        <svg class="navbar_icon navbar_icon--2x navbar_svg">
           <use xlink:href="#icon-cart" />
         </svg>
-        <div class="invisible">
-          <span class="invisible">
+        <div class="navbar_invisible">
+          <span class="navbar_invisible">
             Publier
           </span>
         </div>
       </a>
     </li>
     <li>
-      <a href="#">
-        <svg class="icon icon--2x">
+      <a class="navbar_a" href="#">
+        <svg class="navbar_icon navbar_icon--2x navbar_svg">
           <use xlink:href="#icon-user" />
         </svg>
-        <div class="invisible">
-          <span class="invisible">
+        <div class="navbar_invisible">
+          <span class="navbar_invisible">
             Profil
           </span>
         </div>
@@ -50,7 +50,7 @@
     </li>
   </ul>
 </nav>
-<svg xmlns="http://www.w3.org/2000/svg" class="icons">
+<svg xmlns="http://www.w3.org/2000/svg" class="navbar_icons navbar_svg">
   <symbol id="icon-cart" viewBox="0 0 92 92">
     <path d="M91.8 27.3l-10.7 33.7c-.8 2.4-2.9 4-5.4 4h-41.3c-2.4 0-4.7-1.5-5.5-3.7l-15.8-42.3h-9.1c-2.2 0-4-1.8-4-4s1.8-4 4-4h11.9c1.7 0 3.2 1.1 3.8 2.7l16.3 43.3h38l8.5-27h-47.1c-2.2 0-4-1.8-4-4s1.8-4 4-4h52.6c1.3 0 2.5.7 3.2 1.7.8 1 1 2.4.6 3.6zm-55.4 43c-1.7 0-3.4.7-4.6 1.9-1.2 1.2-1.9 2.9-1.9 4.6 0 1.7.7 3.4 1.9 4.6 1.2 1.2 2.9 1.9 4.6 1.9s3.4-.7 4.6-1.9c1.2-1.2 1.9-2.9 1.9-4.6 0-1.7-.7-3.4-1.9-4.6-1.2-1.2-2.9-1.9-4.6-1.9zm35.9 0c-1.7 0-3.4.7-4.6 1.9s-1.9 2.9-1.9 4.6c0 1.7.7 3.4 1.9 4.6 1.2 1.2 2.9 1.9 4.6 1.9 1.7 0 3.4-.7 4.6-1.9 1.2-1.2 1.9-2.9 1.9-4.6 0-1.7-.7-3.4-1.9-4.6s-2.9-1.9-4.6-1.9z" />
   </symbol>
