--- a/templates/space/index.html.twig
+++ b/templates/space/index.html.twig
@@ -1,30 +1,30 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <header class="header-home">
-            <img class="logo" src="{{ asset('build/images/logo.png') }}" width="60" alt="Marché Conclu" />
-            <p class="logo-title">
+    <header class="space_index_header-home">
+            <img class="space_index_logo" src="{{ asset('build/images/logo.png') }}" width="60" alt="Marché Conclu" />
+            <p class="space_index_logo-title">
                 Marché
                 <br>
                     C O N C L U
                 </p>
             {{ form_start(form) }}
-            <div class="my-custom-class-for-errors">
+            <div class="space_index_my-custom-class-for-errors">
                 {{ form_errors(form) }}
             </div>
-            <div class="row">
-                <div class="col">
-                    {{ form_widget(form.location, {'attr': {'class': 'form-search'}}) }}
+            <div class="space_index_row">
+                <div class="space_index_col">
+                    {{ form_widget(form.location, {'attr': {'class': 'space_index_form-search'}}) }}
                 </div>
-                <div class="col" id="some-custom-id"></div>
+                <div class="space_index_col" id="some-custom-id"></div>
             </div>
-            <button class="btn form-submit">
+            <button class="space_index_btn form-submit">
                 {{ button_label|default('Chercher') }}
             </button>
             {{ form_end(form) }}
         </div>
     </header>
-    <div class="space-pitch">
+    <div class="space_index_space-pitch">
         <p>
             Un accélérateur de business,
             <br>
@@ -33,8 +33,8 @@
         </div>
         {% if spaces %}
             {% if location %}
-                <p class="space-count">
-                    <span id="space-count">
+                <p class="space_index_count">
+                    <span id="space_index_count">
                         {{ spaces|length }}
                     </span>
                     bureaux ont été trouvés à
@@ -42,28 +42,28 @@
                 </p>
             {% endif %}
             {% for space in spaces %}
-                <figure class="offer">
-                    <img class="image-offer" src="{{ asset('build/images/imageHome.svg') }}" height="160" alt="Marché Conclu" />
-                    <figcaption class="text-offer">
-                        <ul class="cardcontent">
-                            <li class="spacelocation">
+                <figure class="space_index_offer">
+                    <img class="space_index_image-offer" src="{{ asset('build/images/imageHome.svg') }}" height="160" alt="Marché Conclu" />
+                    <figcaption class="space_index_text-offer">
+                        <ul class="space_index_cardcontent">
+                            <li class="space_index_spacelocation">
                                 {{ space.location }}
                             </li>
-                            <li class="spacename">
+                            <li class="space_index_spacename">
                                 {{ space.name }}
                             </li>
-                            <li class="spacecategory">
+                            <li class="space_index_spacecategory">
                                 {{ space.category }}
                             </li>
-                            <li class="spacesurface">
+                            <li class="space_index_spacesurface">
                                 {{ space.surface }}
                                 m²
                             </li>
-                            <li class="spacecapacity">
+                            <li class="space_index_spacecapacity">
                                 {{ space.capacity }}
                                 places
                             </li>
-                            <li class="spaceprice">
+                            <li class="space_index_spaceprice">
                                 {{ random(50, 250) }}
                                 €/jour
                             </li>
