--- a/templates/space/new.html.twig
+++ b/templates/space/new.html.twig
@@ -3,10 +3,10 @@
     New Space
 {% endblock %}
 {% block body %}
-    <h1 class="add-space-title">
+    <h1 class="space_new_add-space-title">
         Créer un nouvel espace
     </h1>
-    <div class="form-container">
+    <div class="space_new_form-container">
         {{ include('space/_form.html.twig') }}
     </div>
 {% endblock %}
