--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -228,11 +228,8 @@ body {
     font-weight: bold;
 }
 
-.space-pitch {
-
-    p {
+.space-pitch p {
     text-align: center;
-    }
 }
 
 #buttonCardShow {
