--- a/templates/space/index.html.twig
+++ b/templates/space/index.html.twig
@@ -31,5 +31,5 @@
     créé par vous, pour vous.
   </p>
 </div>
-{% include "_carrousel.html.twig" %}
+{% include "_carousel.html.twig" %}
 {% endblock %}
