--- a/templates/_carousel.html.twig
+++ b/templates/_carousel.html.twig
@@ -3,22 +3,27 @@
         <div class="carousel-item carousel-item-visible">
             <img src="{{ asset('build/images/bureauprivee.jpg') }}"
                 alt="bureau privee" />
+            <div class="texte-center">BUREAU PRIVEE</div>
         </div>
         <div class="carousel-item">
             <img src="{{ asset('build/images/coworking.jpg') }}"
                 alt="co-working" />
+            <div class="texte-center">CO-WORKING</div>
         </div>
         <div class="carousel-item">
             <img src="{{ asset('build/images/salledereunion.jpg') }}"
                 alt="salle de reunion" />
+            <div class="texte-center">SALLE DE REUNION</div>
         </div>
         <div class="carousel-item">
             <img src="{{ asset('build/images/openspace.jpg') }}"
                 alt="open space" />
+            <div class="texte-center">OPEN SPACE</div>
         </div>
         <div class="carousel-item">
             <img src="{{ asset('build/images/espacedestockage.jpg') }}"
                 alt="espace de stockage" />
+            <div class="texte-center">ESPACE DE STOCKAGE</div>
         </div>
         <div class="carousel-actions">
             <button id="carousel-button-prev" aria-label="Previous"><</button>
