added background color opacitiy for text space

--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -12,4 +12,4 @@ $color-white: #FAFAFA;
 $color-burgundy: #BD1110;
 $color-grey: #322E2A;
 $color-blue: #5271FF;
-$color-cerise: #7D1C1C;
+$color-cerise: rgba(125, 28, 28, 0.5);
