--- a/assets/styles/carousel.scss
+++ b/assets/styles/carousel.scss
@@ -64,11 +64,17 @@
 }
 
 .texte-center {
+    font-family: 'Actor';
+    font-size: 1.75rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: $color-white;
     background-color: $color-cerise;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 1rem;
+    width: 60vw;
+    height: 30vh;
   }
