--- a/templates/space/index.html.twig
+++ b/templates/space/index.html.twig
@@ -31,5 +31,25 @@
     créé par vous, pour vous.
   </p>
 </div>
-{% include "_carousel.html.twig" %}
+<div class="carousel">
+    {% for category in categories %}
+      {% if loop.index0 == 0 %}
+        <div class="carousel-item carousel-item-visible">
+      {% else %}
+        <div class="carousel-item">
+      {% endif %}
+            <img src="{{ asset('build/images/' ~ category|lower|replace({' ': '', '-': ''}) ~ '.jpg') }}"
+                    alt="{{ category|lower }}" />
+                <a href="#">
+                    <div class="texte-center">
+                        <p>{{ category }}</p>
+                    </div>
+                </a>
+            </div>
+    {% endfor %}
+    <div class="carousel-actions">
+                <button id="carousel-button-prev" aria-label="Previous"><</button>
+                <button id="carousel-button-next" aria-label="Next">></button>
+    </div>
+</div>
 {% endblock %}
