--- a/templates/space/index.html.twig
+++ b/templates/space/index.html.twig
@@ -42,7 +42,7 @@
             {% endif %}
             {% for space in spaces %}
                 <figure class="offer">
-                    <img class="image-offer" src="{{ asset('build/images/imageHome.svg') }}" alt="Marché Conclu" />
+                    <img class="image-offer" src="{{ asset('build/images/' ~ space.photos) }}" alt="Marché Conclu" />
                     <figcaption class="text-offer">
                         <ul class="cardcontent">
                             <div class="card-border">
