modified controller and twig for only display 2 annonces

--- a/templates/space/index.html.twig
+++ b/templates/space/index.html.twig
@@ -54,7 +54,7 @@
 </div>
 <div>
     <h3 class="premium-title">Annonces premium</h3>
-    {% for space in spaces|slice(0, 2) %}
+    {% for space in spaces %}
                 <figure class="offer">
                     <img class="image-offer" src="{{ asset('build/images/imageHome.svg') }}" alt="Marché Conclu" />
                     <figcaption class="text-offer">
