--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -138,7 +138,6 @@ body {
 {
     margin-top: 3rem;
     padding-top: 1rem;
-    border-top: .5px solid #ccc;
     font-size: 1.3rem;
     font-family: Abhaya;
     text-align: center;
@@ -223,8 +222,12 @@ body {
 
 .card-content-up {
     font-weight: bold;
-    padding-bottom: 1rem;
-    margin-top: 1rem;
+    padding-bottom: 0.5rem;
+    margin-top: 0.5rem;
+}
+
+.card-content-down {
+    margin-left: 1rem;
 }
 
 .spaceprice {
