better space on homepage

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -127,7 +127,7 @@ body {
 }
 
 .space-pitch {
-    padding: 1rem 0;
+    padding: 1rem 0 2rem;
     font-size: 1.3rem;
     font-family: Abhaya;
     text-align: center;
@@ -137,7 +137,6 @@ body {
 .premium-title
 {
     margin-top: 3rem;
-    padding-top: 1rem;
     font-size: 1.3rem;
     font-family: Abhaya;
     text-align: center;
