--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -18,6 +18,7 @@
         {# If you want to control the URL the user is redirected to on success
         <input type="hidden" name="_target_path" value="/account"/> #}
 
-        <button type="submit">login</button>
+        <button type="submit">Se connecter</button>
     </form>
+    <a href="{{ path('app_register') }}"> Créer un compte </a>
 {% endblock %}
