--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -8,8 +8,13 @@
     src: url('../fonts/AbhayaLibre-Regular.ttf');
 }
 
+$font-family-primary: 'Abhaya';
+$font-family-second: 'Actor';
 $color-white: #FAFAFA;
 $color-burgundy: #BD1110;
 $color-grey: #322E2A;
 $color-blue: #5271FF;
-$color-cerise: rgba(99, 35, 35, 0.75);
+$color-cerise: rgba(99,
+35,
+35,
+0.75);
