--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -13,8 +13,21 @@
 {% if app.user.company %}
 <p>{{ "Société :" ~ " " ~ app.user.company }}</p>
 {% endif %}
-<a href="{{ path('space_index') }}">Retourner à la liste des espaces</a>
 </div>
-
+{% for space in spaces %}
+<figure class="offer">
+<div style="text-align: center; font-weight:bolder; margin-bottom: 2rem;">{{ "Nom de l'annonce :" ~ " " ~ space.name }}</div>
+<img class="image-offer" src="{{ asset('build/images/imageHome.svg') }}" alt="Marché Conclu" />
+<figcaption class="text-offer">
+<div style="text-align: center">
+<div class="card-border card-content-up cardcontent">
+</figcaption>
+</figure>
+<div style="text-align:center;">
+<a class="form-submit" id="buttonCardShow" href="{{ path("space_show", {id: space.id}) }}">Voir l'annonce</a>
+</div>
+{% endfor %}
+</div>
+</div>
 {% endif %}
 {% endblock %}
