--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,12 +1,12 @@
 @import "variables.scss";
 @import "carousel.scss";
+
 body {
     margin: 0;
     padding: 0;
     margin-bottom: 5rem;
     text-align: center;
 }
-
 
 /* START NAVBAR */
 
@@ -94,7 +94,6 @@ body {
     padding-left: 1rem;
 }
 
-
 /* END NAVBAR */
 
 .header-home {
@@ -118,11 +117,11 @@ body {
     margin: 0;
 }
 
+
 .form-search {
     padding-left: 5rem;
     padding-right: 5rem;
     text-align: center;
-    border: 1px solid #ccc;
     border-radius: 4px;
     /* Rounded borders */
     box-sizing: border-box;
@@ -144,7 +143,6 @@ body {
     text-align: center;
     color: $color-burgundy;
 }
-
 
 /* START HOME_INDEX */
 
@@ -217,6 +215,7 @@ body {
     display: flex;
     flex-direction: row;
     font-size: 1rem;
+
     span {
         padding: 0 0.2rem;
         font-weight: bolder;
@@ -288,7 +287,6 @@ ul {
     padding: 0;
 }
 
-
 /* Style inputs with type="text", select elements and textareas */
 
 input[type=text],
@@ -309,9 +307,8 @@ textarea,
     /* Add a top margin */
     margin-bottom: 16px;
     /* Bottom margin */
-    resize: vertical/* Allow the user to vertically resize the textarea (not horizontally) */
+    resize: vertical;/* Allow the user to vertically resize the textarea (not horizontally) */
 }
-
 
 /* Style the submit button with a specific background color etc */
 
@@ -363,7 +360,6 @@ input[type=submit],
     text-decoration: none;
 }
 
-
 /* START SPACE_INDEX */
 
 .search {
@@ -394,7 +390,6 @@ input[type=submit],
     box-shadow: 2px -6px 10px 0px rgba(0, 0, 0, 0.84);
     height: 80vh;
 }
-
 
 /* PROFILE */
 
