--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -339,6 +339,66 @@ input[type=submit], .form-submit {
     text-decoration: none;
 }
 
+
+
+/* LOGIN/REGISTER PAGE */
+.login-body {
+    height: 90vh;
+    background-color: $color-cerise;
+}
+
+.login-title{
+    margin: 0;
+    padding-top: 1.5rem;
+    text-align: center;
+    font-family: $fontBodiniLight;
+    font-size: 3rem;
+    color: $color-white;
+    line-height: 1.5rem;
+}
+
+.conclu {
+    font-size: 1rem;
+}
+
+.invalidlogin {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: center;
+    background-color: $color-burgundy;
+    color: $color-white;
+    padding: 2rem;
+}
+
+.connect-you {
+    display: flex;
+    justify-content: center;
+    font-family: $fontBodiniLight;
+    color: $color-white;
+}
+
+.login-register {
+    margin: auto;
+    width: 75vw;
+    padding: 5rem 2rem;
+    border-radius: 1rem;
+    height: auto;
+    background-color: $color-white;
+    font-family: $fontBodiniLight;
+
+}
+
+.submit-login {
+    color: $color-white;
+    background-color: $color-cerise;
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+}
+
+.registeryou {
+    text-decoration: none;
+    color: black;
+}
 /* PROFILE */
 
 .user-index-container {
