--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -4,21 +4,30 @@
 {# ... #}
 
 {% block body %}
+    <div class="login-body">
+    <p class="login-title">
+    Marché
+    <br>
+    <span class="conclu">C O N C L U</span>
+    </p>
     {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        <div class="invalidlogin">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
-
+    <h1 class="connect-you">Connectez-vous</h1>
+    <div class="login-register">
     <form action="{{ path('login') }}" method="post">
-        <label for="username">Email:</label>
+        <label for="username">Email</label>
         <input type="text" id="username" name="_username" value="{{ last_username }}"/>
 
-        <label for="password">Password:</label>
+        <label for="password">Password</label><br>
         <input type="password" id="password" name="_password"/>
 
         {# If you want to control the URL the user is redirected to on success
         <input type="hidden" name="_target_path" value="/account"/> #}
 
-        <button type="submit">Se connecter</button>
+        <button class="submit-login" type="submit">Login</button>
     </form>
-    <a href="{{ path('app_register') }}"> Créer un compte </a>
+    <a class="registeryou" href="{{ path('app_register') }}"> Créer un compte </a>
+    <div>
+    </div>
 {% endblock %}
