--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -373,7 +373,7 @@ input[type=submit],
 }
 
 .search-header-h2 {
-    font-family: $font-family-second;
+    font-family: $fontWorkSans;
 }
 
 .search-header-market {
