--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -13,59 +13,59 @@
 				Chercher
 			</button>
 		</form>
+	</header>
+	<div class="space-pitch">
+		<p>
+			Un accélérateur de business,
+			<br>
+			créé par vous, pour vous.
+		</p>
 	</div>
-</header>
-<div class="space-pitch">
-	<p>
-		Un accélérateur de business,
-		<br>
-		créé par vous, pour vous.
-	</p>
-</div>
-<div class="carousel">
-	{% for category in categories %}
-		<div class="carousel-item{{ loop.index0 == 0 ? ' carousel-item-visible' : '' }}">
-			<img src="{{ asset('build/images/' ~ category|lower|replace({' ': '', '-': ''}) ~ '.jpg') }}" alt="{{ category|lower }}"/>
-			<a href="#">
-				<div class="texte-center">
-					<p>{{ category }}</p>
-				</div>
-			</a>
-		</div>
+	<div class="carousel">
+		{% for category in categories %}
+			<div class="carousel-item{{ loop.index0 == 0 ? ' carousel-item-visible' : '' }}">
+				<img src="{{ asset('build/images/' ~ category|lower|replace({' ': '', '-': ''}) ~ '.jpg') }}" alt="{{ category|lower }}"/>
+				<a href="#">
+					<div class="texte-center">
+						<p>{{ category }}</p>
+					</div>
+				</a>
+			</div>
 
-	{% endfor %}
-	<div class="carousel-actions">
-		<button id="carousel-button-prev" aria-label="Previous"><</button><buttonid="carousel-button-next"aria-label="Next">></button>
+		{% endfor %}
+		<div class="carousel-actions">
+			<button id="carousel-button-prev" aria-label="Previous"><</button><buttonid="carousel-button-next"aria-label="Next">></button>
+		</div>
 	</div>
-</div>
-<div>
-	<h3 class="premium-title">Annonces premium</h3>
-	{% for space in spaces %}
-		<figure class="offer">
-			<img class="image-offer" src="{{ asset('build/images/imageHome.svg') }}" alt="Marché Conclu"/>
-			<figcaption class="text-offer">
-				<div class="card-border card-content-up cardcontent">
-					<div class="spacecategory card-content-up">{{ space.category }}
-						<span class="point">·</span>
+	<div>
+		<h3 class="premium-title">Annonces premium</h3>
+		{% for space in spaces %}
+			<figure class="offer">
+				<img class="image-offer" src="{{ asset('build/images/imageHome.svg') }}" alt="Marché Conclu"/>
+				<figcaption class="text-offer">
+					<div class="card-border card-content-up cardcontent">
+						<div class="spacecategory card-content-up">{{ space.category }}
+							<span class="point">·</span>
+						</div>
+						<div class="spacecapacity card-content-up">{{ space.capacity }}
+							places
+							<span class="point">·</span>
+						</div>
+						<div class="spacesurface card-content-up">{{ space.surface }}
+							m²</div>
 					</div>
-					<div class="spacecapacity card-content-up">{{ space.capacity }}
-						places
-						<span class="point">·</span>
+					<div class="spacelocation card-content-down">{{ space.location }}</div>
+					<div id="price">
+						<div class="spaceprice">
+							<span id="spanprice">{{ random(50, 250) }}
+								€</span>
+							<span id="spanpriceday">
+								/ jour</span>
+						</div>
+						<a class="form-submit" id="buttonCardShow" href="{{ path("space_show", {id: space.id}) }}">Voir l'annonce</a>
 					</div>
-					<div class="spacesurface card-content-up">{{ space.surface }}
-						m²</div>
-				</div>
-				<div class="spacelocation card-content-down">{{ space.location }}</div>
-				<div id="price">
-					<div class="spaceprice">
-						<span id="spanprice">{{ random(50, 250) }}
-							€</span>
-						<span id="spanpriceday">
-							/ jour</span>
-					</div>
-					<a class="form-submit" id="buttonCardShow" href="{{ path("space_show", {id: space.id}) }}">Voir l'annonce</a>
-				</div>
-			</figcaption>
-		</figure>
-	{% endfor %}
-</div>{% endblock %}
+				</figcaption>
+			</figure>
+		{% endfor %}
+	</div>
+{% endblock %}
