--- a/templates/space/index.html.twig
+++ b/templates/space/index.html.twig
@@ -1,18 +1,13 @@
-{% extends 'base.html.twig' %} {% block title %}Trouvez votre espace de travail{% endblock %} {% block body %}
-<div class="search">
-    <div class="search-header">
-        <p class="search-header-market">Marché</p>
-        <p class="search-header-concluded">CONCLU</p>
-        <h2 class="search-header-h2">Que recherchez - vous ?</h2>
-    </div>
-    <div class='search-criteria'>
-        <!--<section class="search-location">fffff</section>
-        <section class="search-category">
-            <ffff/section>
-                <section class='search-price'>ffff</section>
-                <section class="search-capacity">ffff</section>
-                <section class="search-surface">fff</section>
-                <section class="search-slot">ffff</section>-->
-    </div>
-</div>
+{% extends 'base.html.twig' %}
+{% block title %}Trouvez votre espace de travail
+{% endblock %}
+{% block body %}
+	<div class="search">
+		<div class="search-header">
+			<p class="search-header-market">Marché</p>
+			<p class="search-header-concluded">CONCLU</p>
+			<h2 class="search-header-h2">Que recherchez - vous ?</h2>
+		</div>
+		<div class='search-criteria'></div>
+	</div>
 {% endblock %}
