--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -289,6 +289,7 @@ ul {
 
 /* Style inputs with type="text", select elements and textareas */
 input[type=text], input[type=password], select, textarea, .form-content {
+    background-color: rgba(224, 224, 224, 0.87);
     width: 100%; /* Full width */
     padding: 12px; /* Some padding */ 
     border: 1px solid #ccc; /* Gray border */
