--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -288,26 +288,15 @@ ul {
 }
 
 /* Style inputs with type="text", select elements and textareas */
-
-input[type=text],
-select,
-textarea,
-.form-content {
-    width: 100%;
-    /* Full width */
-    padding: 12px;
-    /* Some padding */
-    border: 1px solid #ccc;
-    /* Gray border */
-    border-radius: 4px;
-    /* Rounded borders */
-    box-sizing: border-box;
-    /* Make sure that padding and width stays in place */
-    margin-top: 6px;
-    /* Add a top margin */
-    margin-bottom: 16px;
-    /* Bottom margin */
-    resize: vertical;/* Allow the user to vertically resize the textarea (not horizontally) */
+input[type=text], input[type=password], select, textarea, .form-content {
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */ 
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
 }
 
 /* Style the submit button with a specific background color etc */
@@ -423,7 +412,7 @@ input[type=submit],
 }
 
 .connect-you {
-    margin-top: 5rem;
+    margin-top: 7rem;
     display: flex;
     justify-content: center;
     font-family: $fontBodiniLight;
@@ -433,22 +422,35 @@ input[type=submit],
 .login-register {
     margin: auto;
     width: 75vw;
-    padding: 5rem 2rem;
+    padding: 3rem 2rem 2rem;
     border-radius: 1rem;
     height: auto;
     background-color: $color-white;
     font-family: $fontBodiniLight;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
 }
 
 .submit-login {
+    margin: auto;
+    text-align: center;
     color: $color-white;
     background-color: $color-cerise;
     padding: 1rem 2rem;
     border-radius: 1rem;
 }
 
+.loginorregister {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .registeryou {
+    margin-top: 1rem;
+    text-align: center;
     text-decoration: none;
     color: black;
 }
