--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -33,4 +33,4 @@ $color-white: #FAFAFA;
 $color-burgundy: #BD1110;
 $color-grey: #322E2A;
 $color-blue: #5271FF;
-$color-cerise: #632323;
+$color-cerise: rgba(99, 35, 35, 0.75);
