--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -3,7 +3,7 @@
 		<li><a class="navbar_a"href="{{ path("home") }}"><svg class="navbar_icon navbar_icon--2x navbar_svg"><use xlink:href="#icon-home"/></svg><div class="navbar_invisible"><span class="navbar_invisible">Accueil</span></div></a></li>
 		<li><a class="navbar_a"href="{{ path("space_index") }}"><svg class="navbar_icon navbar_icon--2x navbar_svg"><use xlink:href="#icon-search"/></svg><div class="navbar_invisible"><span class="navbar_invisible">Louer</span></div></a></li>
 		<li><a class="navbar_a"href="{{ path("space_new") }}"><svg class="navbar_icon navbar_icon--2x navbar_svg"><use xlink:href="#icon-cart"/></svg><div class="navbar_invisible"><span class="navbar_invisible">Publier</span></div></a></li>
-		<li><a class="navbar_a" href="#"><svg class="navbar_icon navbar_icon--2x navbar_svg"><use xlink:href="#icon-user"/></svg><div class="navbar_invisible"><span class="navbar_invisible">Profil</span></div></a></li>
+		<li><a class="navbar_a" href="{{ path("user_index") }}"><svg class="navbar_icon navbar_icon--2x navbar_svg"><use xlink:href="#icon-user"/></svg><div class="navbar_invisible"><span class="navbar_invisible">Profil</span></div></a></li>
 	</ul>
 
 </nav>
