--- a/templates/space/search.html.twig
+++ b/templates/space/search.html.twig
@@ -1,30 +1,8 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 {% include 'space/_searchbar.html.twig' %}
-<div class="carousel">
-    {% for category in categories %}
-      {% if loop.index0 == 0 %}
-        <div class="carousel-item carousel-item-visible">
-      {% else %}
-        <div class="carousel-item">
-      {% endif %}
-            <img src="{{ asset('build/images/' ~ category|lower|replace({' ': '', '-': ''}) ~ '.jpg') }}"
-                    alt="{{ category|lower }}" />
-                <a href="#">
-                    <div class="texte-center">
-                        <p>{{ category }}</p>
-                    </div>
-                </a>
-            </div>
-
-    {% endfor %}
-    <div class="carousel-actions">
-                <button id="carousel-button-prev" aria-label="Previous"><</button>
-                <button id="carousel-button-next" aria-label="Next">></button>
-    </div>
-</div>
-<div>
-    <h3 class="premium-title">Annonces premium</h3>
+{% if spaces %}
+<p>{{ spaces|length }} espaces trouvés</p>
     {% for space in spaces %}
       <figure class="offer">
           <img class="image-offer" src="{{ asset('build/images/imageHome.svg') }}" alt="Marché Conclu" />
@@ -46,4 +24,7 @@
       </figure>
     {% endfor %}
 </div>
+{% else %}
+<p> Aucun espace trouvé </p>
+{% endif %}
 {% endblock %}
