--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -13,7 +13,7 @@
       </a>
     </li>
     <li>
-      <a class="navbar_a" href="#">
+      <a class="navbar_a" href="{{ path("space_search") }}">
         <svg class="navbar_icon navbar_icon--2x navbar_svg">
           <use xlink:href="#icon-search" />
         </svg>
