--- a/templates/space/new.html.twig
+++ b/templates/space/new.html.twig
@@ -3,10 +3,13 @@
     New Space
 {% endblock %}
 {% block body %}
-    <h1 class="space_new_add-space-title">
-        Créer un nouvel espace
-    </h1>
-    <div class="space_new_form-container">
+<div class="new-space-body">
+<p class="new-space-title">Marché<br>
+    <span class="conclu">C O N C L U</span>
+</p>
+    <h1 class="create-new-space">Ajouter une nouvelle annonce</h1>
+    <div class="new-space-form">
         {{ include('space/_form.html.twig') }}
     </div>
+<div>
 {% endblock %}
