--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -289,7 +289,7 @@ ul {
 
 /* Style inputs with type="text", select elements and textareas */
 
-input[type=text], input[type=password], select, textarea, .form-content {
+input[type=text], input[type=password],input[type=number], select, textarea, .form-content {
     background-color: rgba(224, 224, 224, 0.87);
     width: 100%; /* Full width */
     padding: 12px; /* Some padding */ 
@@ -423,6 +423,55 @@ input[type=submit],
     text-decoration: none;
     color: black;
 }
+
+/* ADD NEW SPACE */
+
+.new-space-body {
+    height: 90vh;
+    background-color: $color-cerise;
+}
+
+.new-space-title {
+    margin: 0;
+    padding-top: 1.5rem;
+    text-align: center;
+    font-family: $fontBodiniLight;
+    font-size: 3rem;
+    color: $color-white;
+    line-height: 1.5rem;
+}
+
+.create-new-space {
+    font-size: 1.5rem;
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+    font-family: $fontBodiniLight;
+    color: $color-white;
+}
+
+.new-space-form {
+    margin: auto;
+    width: 75vw;
+    padding: 2rem 2rem;
+    border-radius: 1rem;
+    height: auto;
+    background-color: $color-white;
+    font-family: $fontBodiniLight;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.add-new-space {
+    margin-top: 1rem;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+}
+
+/* END NEW SPACE */
 
 /* START SPACE_INDEX */
 
